Fix li elements being way too tall

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -48,6 +48,7 @@ ul {
 li {
   margin: 0;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -82,6 +83,7 @@ svg {
 img,
 video {
   max-width: 100%;
+  max-height: 80vh;
   margin: 0 auto;
   border: solid 1px var(--foreground-very-alpha);
   overflow: hidden;
